# MinnowSnap

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  README.md  build.rs  manifest
.beads/: config.yaml  issues.jsonl  metadata.json
.github/: dependabot.yml
.github/workflows/: bundle.yml  release.yml  validate.yml
.serena/: project.yml
build-tools/: Cargo.toml
build-tools/src/: i18n.rs  icons.rs  resources.rs  utils.rs
cpp/: app_utils.hpp  image_provider.hpp  macos_window_utils.hpp  macos_window_utils.mm  main.cpp
crates/minnow-app/: Cargo.toml  build.rs
crates/minnow-app/src/: bootstrap.rs  composition.rs  lib.rs  main.rs  runtime.rs
crates/minnow-app/src/app/: bootstrap.rs  commands.rs  composition.rs  mod.rs  runtime.rs
crates/minnow-app/src/platform/: async_ui.rs  background_host.rs  clipboard.rs  hotkey.rs  logging.rs  mod.rs  native_window.rs  notify.rs  storage.rs  system.rs  tray.rs  window_drag.rs  windowing.rs
crates/minnow-app/src/platform/io/: clipboard.rs  fonts.rs  mod.rs  storage.rs
crates/minnow-app/src/platform/shutdown/: control_plane.rs  mod.rs  windows.rs
crates/minnow-app/src/services/: assets.rs  clipboard.rs  fonts.rs  geometry.rs  hotkeys.rs  i18n.rs  mod.rs  notify.rs  paths.rs  settings.rs  storage.rs
crates/minnow-app/src/services/capture/: action.rs  long_capture.rs  mod.rs  repository.rs  service.rs  stitcher.rs  target.rs
crates/minnow-app/src/services/ocr/: config.rs  detector.rs  engine.rs  mod.rs  model_manager.rs  preprocess.rs  recognizer.rs  service.rs  visualization.rs
crates/minnow-app/src/ui/: key_unicode.rs  mod.rs
crates/minnow-app/src/ui/features/: mod.rs
crates/minnow-app/src/ui/features/long_capture/: coordinator.rs  layout.rs  mod.rs
crates/minnow-app/src/ui/features/long_capture/view/: frame.rs  mod.rs  preview.rs  toolbar.rs
crates/minnow-app/src/ui/features/overlay/: actions.rs  interaction.rs  mod.rs  window_catalog.rs
crates/minnow-app/src/ui/features/overlay/annotation/: engine.rs  hit_test.rs  mod.rs  model.rs  ops.rs  raster.rs  raster_cache.rs  store.rs
crates/minnow-app/src/ui/features/overlay/annotation/engine/: document.rs  interaction.rs  render_state.rs  style.rs  text.rs
crates/minnow-app/src/ui/features/overlay/render/: annotation.rs  components.rs  diagnostics.rs  hud.rs  layout.rs  mod.rs  picker.rs  properties.rs  selection.rs  toolbar.rs
crates/minnow-app/src/ui/features/overlay/state/: annotation.rs  command.rs  diagnostics.rs  effects.rs  frame.rs  mod.rs  picker.rs  selection.rs  session.rs  surface.rs
crates/minnow-app/src/ui/features/overlay/view/: actions.rs  input.rs  mod.rs  render.rs
crates/minnow-app/src/ui/features/pin/: actions.rs  mod.rs  render.rs  request.rs  selection_text.rs  state.rs
crates/minnow-app/src/ui/features/pin/view/: input.rs  mod.rs  ocr_geometry.rs  ocr_text.rs  render.rs
crates/minnow-app/src/ui/features/preferences/: mod.rs  view.rs
crates/minnow-app/src/ui/features/preferences/pages/: about.rs  chrome.rs  components.rs  general.rs  mod.rs  notifications.rs  ocr.rs  shortcuts.rs
crates/minnow-app/src/ui/features/preferences/state/: frame.rs  general.rs  mod.rs  notifications.rs  ocr.rs  shortcuts.rs  state.rs  store.rs
crates/minnow-app/src/ui/support/: appearance.rs  hotkeys.rs  locale.rs  mod.rs  render_image.rs  system.rs  window_drag.rs  windowing.rs
crates/minnow-app/tests/: module_layout_smoke.rs
crates/minnow-assets/: Cargo.toml
crates/minnow-core/: Cargo.toml
crates/minnow-core/src/: app_meta.rs  geometry.rs  i18n.rs  lib.rs  paths.rs  settings.rs
crates/minnow-core/src/capture/: action.rs  long_capture.rs  mod.rs  service.rs  source.rs  stitcher.rs
crates/minnow-core/src/ocr/: mod.rs  service.rs
crates/minnow-core/src/platform/: logging.rs  mod.rs  notify.rs
crates/minnow-core/src/platform/io/: fonts.rs  mod.rs  storage.rs
crates/minnow-core/src/platform/shutdown/: mod.rs  windows.rs
crates/minnow-ocr/: Cargo.toml
crates/minnow-paths/: Cargo.toml
crates/minnow-ui/: Cargo.toml
crates/minnow-ui/src/: key_unicode.rs  lib.rs
crates/minnow-ui/src/features/long_capture/: coordinator.rs  layout.rs  mod.rs
crates/minnow-ui/src/features/long_capture/view/: frame.rs  preview.rs  toolbar.rs
crates/minnow-ui/src/features/overlay/: actions.rs  interaction.rs  mod.rs  window_catalog.rs
crates/minnow-ui/src/features/overlay/annotation/: engine.rs  hit_test.rs  mod.rs  model.rs  ops.rs  raster.rs  raster_cache.rs  store.rs
crates/minnow-ui/src/features/overlay/render/: annotation.rs  components.rs  diagnostics.rs  hud.rs  layout.rs  mod.rs  picker.rs  properties.rs  selection.rs  toolbar.rs
crates/minnow-ui/src/features/overlay/state/: annotation.rs  command.rs  diagnostics.rs  effects.rs  frame.rs  mod.rs  picker.rs  selection.rs  surface.rs
crates/minnow-ui/src/features/overlay/view/: actions.rs  input.rs  mod.rs  render.rs
crates/minnow-ui/src/features/pin/: mod.rs  render.rs  request.rs  state.rs
crates/minnow-ui/src/features/pin/view/: input.rs  mod.rs  ocr_geometry.rs  ocr_text.rs  render.rs
crates/minnow-ui/src/features/preferences/: mod.rs  view.rs
crates/minnow-ui/src/features/preferences/pages/: about.rs  chrome.rs  components.rs  general.rs  mod.rs  notifications.rs  ocr.rs  shortcuts.rs
crates/minnow-ui/src/features/preferences/state/: frame.rs  general.rs  mod.rs  ocr.rs  shortcuts.rs  state.rs  store.rs
crates/minnow-ui/src/shell/: async_ui.rs  background_host.rs  hotkey.rs  mod.rs  native_window.rs  tray.rs  window_drag.rs  windowing.rs
crates/minnow-ui/src/support/: appearance.rs  locale.rs  mod.rs  render_image.rs
legacy/qt/: .qmlls.ini  (+2 more)
locales/: en.yml  zh-CN.yml
plugins/ocr/: Cargo.toml
plugins/ocr/examples/: simple_ocr.rs
plugins/ocr/src/: detector.rs  engine.rs  lib.rs  model_manager.rs  recognizer.rs  utils.rs  visualization.rs
qml/: AppTheme.qml  main.qml  qmldir
rust/: Cargo.toml  build.rs
rust/gpui-window-ext/: Cargo.toml
rust/gpui-window-ext/src/: lib.rs
scripts/: bundle.py  check_no_qt_runtime_deps.py  dev-stop.ps1
src/: main.rs
(+249 files in other folders)
