[package]
name = "MinnowSnap"
version = "0.1.0"
edition = "2024"
authors = ["Lortuante"]

[workspace]
members = ["build-tools", "plugins/ocr"]

[workspace.dependencies]
anyhow = "1.0"
image = { version = "0.25", default-features = false }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
tokio = { version = "1", features = ["full"] }
rayon = "1.8"
reqwest = { version = "0.13.1", features = ["stream"] }
futures-util = "0.3"
cxx = "1.0.192"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }
cc = "1"
mimalloc = "0.1"
xcap = { version = "0.8", features = ["image"] }
arboard = "3.6"
oxipng = { version = "10.0", default-features = false, features = ["parallel", "zopfli", "filetime"] }
global-hotkey = { version = "0.7", features = ["tracing"] }
single-instance = "0.3"
config = { version = "0.15", default-features = false, features = ["async", "toml"] }
toml = "0.9"
directories = "6.0"
auto-launch = "0.6"
font-kit = "0.14"
notify-rust = "4"
rodio = "0.21.1"
once_cell = "1"
rdev = "0.5"
imageproc = "0.26.0"
ndarray = "0.17"
num-traits = "0.2"
ort = "2.0.0-rc.11"
ab_glyph = "0.2.32"
walkdir = "2.5"
quick-xml = { version = "0.39", features = ["serialize"] }
ico = "0.5"
winres = "0.1"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication"] }

[dependencies]
mimalloc = { workspace = true }
cxx = { workspace = true }
cxx-qt = { workspace = true }
cxx-qt-lib = { workspace = true }
image = { workspace = true, features = ["rayon", "png", "jpeg"] }
xcap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
arboard = { workspace = true }
dirs = { workspace = true }
oxipng = { workspace = true }
global-hotkey = { workspace = true }
single-instance = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
auto-launch = { workspace = true }
font-kit = { workspace = true }
notify-rust = { workspace = true }
rodio = { workspace = true }
ocr = { path = "plugins/ocr" }
tokio = { workspace = true }
once_cell = { workspace = true }
rdev = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-app-kit = { workspace = true }

[build-dependencies]
cxx-qt-build = { workspace = true }
cc = { workspace = true }
build-tools = { path = "build-tools" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.bundle]
identifier = "com.lortunate.minnowsnap"
icon = ["assets_icons/icon.icns", "assets_icons/icon.ico"]
osx_info_plist_exts = ["resources/Info.plist.extra"]
