[workspace]
resolver = "3"
members = [
  "crates/minnow-app",
  "crates/minnow-assets",
  "crates/minnow-core",
  "crates/minnow-ui",
  "crates/minnow-ocr",
]
default-members = ["crates/minnow-app"]

[workspace.dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0"
arboard = "3.6"
auto-launch = "0.6"
config = { version = "0.15", default-features = false, features = ["async", "toml"] }
ctrlc = "3.5"
dhat = "0.3"
directories = "6.0"
dirs = "6.0"
font-kit = "0.14"
futures-util = "0.3"
global-hotkey = { version = "0.7", features = ["tracing"] }
gpui = "*"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
ico = "0.5"
image = { version = "0.25", default-features = false }
imageproc = "0.26.1"
mimalloc = "0.1"
ndarray = "0.17"
notify-rust = "4"
num-traits = "0.2"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication"] }
once_cell = "1"
ort = "2.0.0-rc.12"
oxipng = { version = "10.0", default-features = false, features = ["parallel", "zopfli", "filetime"] }
raw-window-handle = "0.6"
rayon = "1.8"
rdev = "0.5"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "stream"] }
rodio = "0.22.2"
rqrr = "0.10"
rust-embed = "8"
rust-i18n = "3.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
single-instance = "0.3"
sys-locale = "0.3.2"
tauri-winrt-notification = "0.7.2"
thiserror = "2.0"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "net"] }
tokio-util = "0.7"
toml = "1.0"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tray-icon = "0.21.3"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.56"
winres = "0.1"
xcap = { version = "0.9", features = ["image"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
