[package]
name = "minnow-app"
version = "0.1.0"
edition = "2024"
authors = ["Lortuante"]

[[bin]]
name = "MinnowSnap"
path = "src/main.rs"

[features]
default = []
dhat-heap = ["dep:dhat"]
overlay-diagnostics = []
portable = []

[dependencies]
ab_glyph = { workspace = true }
anyhow = { workspace = true }
arboard = { workspace = true }
auto-launch = { workspace = true }
config = { workspace = true }
dhat = { workspace = true, optional = true }
directories = { workspace = true }
font-kit = { workspace = true }
futures-util = { workspace = true }
global-hotkey = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
image = { workspace = true, features = ["rayon", "png", "jpeg"] }
imageproc = { workspace = true }
mimalloc = { workspace = true }
ndarray = { workspace = true }
notify-rust = { workspace = true }
num-traits = { workspace = true }
ort = { workspace = true }
oxipng = { workspace = true }
raw-window-handle = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
rodio = { workspace = true }
rqrr = { workspace = true }
rust-embed = { workspace = true }
rust-i18n = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sys-locale = { workspace = true }
single-instance = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
tray-icon = { workspace = true }
xcap = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-app-kit = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
ctrlc = { workspace = true }
tauri-winrt-notification = { workspace = true }
windows = { workspace = true }
winreg = { workspace = true }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
ort = { workspace = true, features = ["load-dynamic"] }

[build-dependencies]
anyhow = { workspace = true }
ico = { workspace = true }
image = { workspace = true, features = ["default"] }
winres = { workspace = true }

[package.metadata.bundle]
identifier = "com.lortunate.minnowsnap"
icon = ["assets_icons/icon.icns", "assets_icons/icon.ico"]
osx_info_plist_exts = ["resources/Info.plist.extra"]

[package.metadata.cargo-machete]
ignored = ["anyhow", "ico", "image", "winres"]
