[package]
name = "minnow-core"
version = "0.1.0"
edition = "2024"

[dependencies]
minnow-assets = { path = "../minnow-assets" }
minnow-ocr = { path = "../minnow-ocr" }

arboard = { workspace = true }
config = { workspace = true }
directories = { workspace = true }
dirs = { workspace = true }
font-kit = { workspace = true }
image = { workspace = true, features = ["rayon", "png", "jpeg"] }
notify-rust = { workspace = true }
once_cell = { workspace = true }
oxipng = { workspace = true }
rodio = { workspace = true }
rqrr = { workspace = true }
rust-i18n = { workspace = true }
serde = { workspace = true }
sys-locale = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
xcap = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
ctrlc = { workspace = true }
tauri-winrt-notification = { workspace = true }
windows = { workspace = true }
winreg = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
