[package]
name = "minnow-ui"
version = "0.1.0"
edition = "2024"

[features]
default = []
overlay-diagnostics = []

[dependencies]
minnow-assets = { path = "../minnow-assets" }
minnow-core = { path = "../minnow-core" }

ab_glyph = { workspace = true }
anyhow = { workspace = true }
font-kit = { workspace = true }
global-hotkey = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
image = { workspace = true, features = ["default"] }
imageproc = { workspace = true }
raw-window-handle = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tray-icon = { workspace = true }
xcap = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
