[package]
name = "ocr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dirs = "6.0.0"
futures-util = "0.3"
image = "0.25"
imageproc = "0.26.0"
log = "0.4"
ndarray = "0.17"
num-traits = "0.2"
ort = "2.0.0-rc.11"
rayon = "1.8"
reqwest = { version = "0.13.1", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ab_glyph = "0.2.32"

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }

[dev-dependencies]
env_logger = "0.11.8"
