[package]
name = "ocr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
futures-util = { workspace = true }
image = { workspace = true, features = ["default"] }
imageproc = { workspace = true }
log = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
ort = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
ab_glyph = { workspace = true }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
ort = { workspace = true, features = ["load-dynamic"] }

[dev-dependencies]
env_logger = { workspace = true }
