[package]
name = "gpui-window-ext"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
gpui = "0.2.2"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6.2"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
objc = "0.2"